# velata

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/desktop/: MANUAL_TEST.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: diff-overlay.tsx  draft-row.test.ts  draft-row.tsx  drafts-rail.test.ts  drafts-rail.tsx  editor-extensions.test.ts  editor-extensions.ts  editor-setup.test.ts  editor-setup.ts  editor-theme.css  editor.test.ts  editor.tsx  footer-hints.tsx  formatting-toolbar.tsx  instruction-palette.tsx  logo.tsx  markdown-view.test.ts  markdown-view.tsx  onboarding.tsx  preview-pane.test.ts  preview-pane.tsx  progress-line.tsx  resize-handles.tsx  scratch-pad.tsx  transform-bar.tsx
apps/desktop/src/hooks/: use-drafts.test.ts  use-drafts.ts  use-live-preview.ts  use-refine.ts  use-scratchpad-keys.ts  use-settings.tsx
apps/desktop/src/lib/: apply-format.test.ts  (+16 more)
design/: scratchpad.reference.html  settings-onboarding-menubar.reference.html  tokens.md
docs/: design-spec.md
(+7 files in other folders)
